Correção erro endereço forms (final)

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_1.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_1.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -97,7 +95,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>240 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_1.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_2.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -123,7 +121,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>100 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_3.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_3.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -149,7 +147,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>57 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_4.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_4.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -175,7 +173,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>110 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_5.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_5.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -201,7 +199,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_6.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_6.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -227,7 +225,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>49 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_7.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_7.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -253,7 +251,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>300 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_8.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_8.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -279,7 +277,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>172 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_9.html">Avaliar</a>
+                  <a class="dsmovie-button" href="form_9.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -305,9 +303,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>412 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_10.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_10.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -333,9 +329,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>146 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_11.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_11.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -361,9 +355,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>78 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_12.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_12.html">Avaliar</a>
                 </div>
               </div>
             </div>
