--- a/page_2.html
+++ b/page_2.html
@@ -71,9 +71,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>708 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_13.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_13.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -99,9 +97,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>200 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_14.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_14.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -127,9 +123,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>74 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_15.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_15.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -155,9 +149,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>460 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_16.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_16.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -183,9 +175,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>17 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_17.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_17.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -211,9 +201,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_18.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_18.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -239,9 +227,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>100 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_19.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_19.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -267,9 +253,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>302 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_20.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_20.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -295,9 +279,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>80 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_21.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_21.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -323,9 +305,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>15 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_22.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_22.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -351,9 +331,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>112 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_23.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_23.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -379,9 +357,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>55 avaliações</p>
-                  <a class="dsmovie-button" href="forms/form_24.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="form_24.html">Avaliar</a>
                 </div>
               </div>
             </div>
