--- a/form_20.html
+++ b/form_20.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!--      --MENU--      -->
@@ -66,11 +66,9 @@
                   </div>
                   <div class="dsmovie-form-btn-container">
                     <button class="dsmovie-button" type="submit">
-                      <a class="dsmovie-button" href="../feedback.html"
-                        >Salvar</a
-                      >
+                      <a class="dsmovie-button" href="feedback.html">Salvar</a>
                     </button>
-                    <a class="dsmovie-button" href="../page_2.html">Cancelar</a>
+                    <a class="dsmovie-button" href="page_2.html">Cancelar</a>
                   </div>
                 </form>
               </div>
