--- a/feedback.html
+++ b/feedback.html
@@ -42,7 +42,7 @@
 
                 <form class="dsmovie-form">
                   <div class="dsmovie-form-btn-container">
-                    <a class="dsmovie-button" href="../index.html">Voltar</a>
+                    <a class="dsmovie-button" href="index.html">Tela Inicial</a>
                   </div>
                 </form>
               </div>
