correção direcionamento de páginas

--- a/page_2.html
+++ b/page_2.html
@@ -36,14 +36,14 @@
           <div class="dsmovie-pagination-box">
             <button>
               <a href="index.html">
-                <img src="./img/arrow.svg" alt="voltar página" />
+                <img src="img/arrow.svg" alt="voltar página" />
               </a>
             </button>
             <p>2 de 2</p>
             <button disabled>
               <img
                 class="dsmovie-flip-horizontal"
-                src="./img/arrow.svg"
+                src="img/arrow.svg"
                 alt="avançar página"
               />
             </button>
@@ -71,7 +71,9 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>708 avaliações</p>
-                  <a class="dsmovie-button" href="form_13.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_13.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -97,7 +99,9 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>200 avaliações</p>
-                  <a class="dsmovie-button" href="form_14.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_14.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -123,7 +127,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>74 avaliações</p>
-                  <a class="dsmovie-button" href="form_15.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_15.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -149,7 +155,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>460 avaliações</p>
-                  <a class="dsmovie-button" href="form_16.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_16.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -175,7 +183,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>17 avaliações</p>
-                  <a class="dsmovie-button" href="form_17.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_17.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -201,7 +211,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="form_18.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_18.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -227,7 +239,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>100 avaliações</p>
-                  <a class="dsmovie-button" href="form_19.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_19.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -253,7 +267,9 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>302 avaliações</p>
-                  <a class="dsmovie-button" href="form_20.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_20.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -279,7 +295,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>80 avaliações</p>
-                  <a class="dsmovie-button" href="form_21.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_21.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -305,7 +323,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>15 avaliações</p>
-                  <a class="dsmovie-button" href="form_22.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_22.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -331,7 +351,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>112 avaliações</p>
-                  <a class="dsmovie-button" href="form_23.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_23.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
@@ -357,7 +379,9 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>55 avaliações</p>
-                  <a class="dsmovie-button" href="form_24.html">Avaliar</a>
+                  <a class="dsmovie-button" href="forms/form_24.html"
+                    >Avaliar</a
+                  >
                 </div>
               </div>
             </div>
