--- a/forms/form_5.html
+++ b/forms/form_5.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <!--      --MENU--      -->
@@ -20,7 +20,7 @@
       <nav class="container">
         <h1>DSMovie</h1>
         <div class="dsmovie-github-link">
-          <img src="/img/github-logo.svg" alt="Logo github" />
+          <img src="../img/github-logo.svg" alt="Logo github" />
           <a href="https://github.com/caiovic" target="_blank">/caiovic</a>
         </div>
       </nav>
@@ -36,11 +36,11 @@
           <div>
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/rr7E0NoGKxvbkb89eR1GwfoYjpA.jpg"
-                alt="Fight Club"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jmlM5sa8vrBWHSBubqAithX6Fx5.jpg"
+                alt="Akira"
               />
               <div class="dsmovie-form-description">
-                <h3>Clube da Luta (1999)</h3>
+                <h3>Akira (1988)</h3>
 
                 <!--      --FORM--      -->
 
@@ -66,9 +66,11 @@
                   </div>
                   <div class="dsmovie-form-btn-container">
                     <button class="dsmovie-button" type="submit">
-                      <a class="dsmovie-button" href="feedback.html">Salvar</a>
+                      <a class="dsmovie-button" href="../feedback.html"
+                        >Salvar</a
+                      >
                     </button>
-                    <a class="dsmovie-button" href="index.html">Cancelar</a>
+                    <a class="dsmovie-button" href="../index.html">Cancelar</a>
                   </div>
                 </form>
               </div>
