--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/empty-star.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>49 avaliações</p>
