--- a/forms/form_9.html
+++ b/forms/form_9.html
@@ -20,7 +20,7 @@
       <nav class="container">
         <h1>DSMovie</h1>
         <div class="dsmovie-github-link">
-          <img src="/img/github-logo.svg" alt="Logo github" />
+          <img src="../img/github-logo.svg" alt="Logo github" />
           <a href="https://github.com/caiovic" target="_blank">/caiovic</a>
         </div>
       </nav>
